[package]
name = "blink-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.6.4"
bumpalo = { version = "3.13.0", features = ["allocator_api", "boxed"] }

[dependencies.k256]
version = "0.13.1"
default-features = false
features = ["ecdsa", "alloc"]

[lib]
name       = "app"
test       = false
bench      = false
crate-type = ["bin"]
